manifests/ingresses/bbms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  namespace: prod
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
status:
  loadBalancer: {}
